# CGLaboratory

./: .gitignore  CMakeLists.txt  Readme.md
cmake/: FindOpenMesh.cmake  cglabFindPackageUtils.cmake
include/: config.h  config.h.in
include/common/: colormap_define.h  osg_common.h
include/openmesh_ext/: openmesh_axis_aligned_bsptree.h  openmesh_octree.h  openmesh_to_osg_mesh.h  openmesh_typedef.h  openmesh_utils.h
include/space/: Octree.h
include/utils/: openmesh_to_osg_mesh.h
resources/meshes/: rabit.off  sphere.stl
src/LearnOpenGL/: CMakeLists.txt
src/LearnOpenGL/1-getting-started/1-1-hello-triangle/: CMakeLists.txt  hello_triangle.cpp
src/LearnOpenGL/1-getting-started/1-2-shaders-uniform/: CMakeLists.txt  shader_uniform.cpp
src/LearnOpenGL/1-getting-started/1-3-textures/: CMakeLists.txt  textures.cpp
src/LearnOpenGL/1-getting-started/1-4-transformations/: CMakeLists.txt  transformations.cpp
src/LearnOpenGL/1-getting-started/1-5-meshes/: CMakeLists.txt  meshes.cpp
src/LearnOpenGL/a1-before-oit/a1-1-head-pointer/: CMakeLists.txt  head-pointer.cpp  head-pointer.frag  head-pointer.vert  head-pointer_frag.h  head-pointer_vert.h
src/PPLL_OIT/: CMakeLists.txt  ppll_oit.cpp
src/apps/: CMakeLists.txt
src/apps/PPLL_OIT/: build_list_subpass.cpp  build_list_subpass.h
src/apps/asdf_fast/: asdf_fast.cpp
src/apps/meshdiff/: CMakeLists.txt  meshdiff.cpp
src/apps/remove_self_inter/: CMakeLists.txt  aabsptree_based_get_self_intersection_pairs.h  box_inter_based_get_self_intersection_pairs.h  remove_self_inter.cpp
src/apps/sdf_bvh/: CMakeLists.txt  sdf_bvh.cpp
src/apps/sdf_double_layer/: CMakeLists.txt  sdf_double_layer.cpp
src/apps/sdf_vcvdt/: CMakeLists.txt  sdf_vcvdt.cpp
src/asdf_fast/: CMakeLists.txt  asdf_fast.cpp
src/meshdiff/: CMakeLists.txt  meshdiff.cpp
