add_subdirectory(1-getting-started/1-1-hello-triangle)
add_subdirectory(1-getting-started/1-2-shaders-uniform)
add_subdirectory(1-getting-started/1-3-textures)
add_subdirectory(1-getting-started/1-4-transformations)
add_subdirectory(1-getting-started/1-5-meshes)


add_subdirectory(a1-before-oit/a1-1-head-pointer)